fixed issue with clicking parent and minor layout issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@ body {
 	font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size: 15px;
 	font-weight: 600;
+	line-height: 20px;
 	vertical-align: baseline;
 }
 .wrap {
